Various fixes for page mirror, new modal setup of code, various layout bugs fixed, Firefox fixes.

--- a/Prototype/_sass/components/_modal.scss
+++ b/Prototype/_sass/components/_modal.scss
@@ -9,21 +9,16 @@
 	width: 100%;
 	height: 100% !important;
 	z-index: 1000;
+	overflow: auto;
 	display: none;
 
 	.panel-content {
-		overflow: auto;
-		top: 0;
-		right: 0;
-		bottom: 0;
-		left: 0;
-		width: 100%;
-		height: 100%;
+		@include container();
 	}
 
 	.header {
 		.close-panel {
-			position: absolute;
+			position: fixed;
 			right: 1em;
 			top: 1em;
 			width: 5em;
